RESOLVED FIXED294877
Intrinsic size of number inputs is incorrect when spin button width is a percentage value
https://bugs.webkit.org/show_bug.cgi?id=294877
Summary Intrinsic size of number inputs is incorrect when spin button width is a perc...
Aditya Keerthi
Reported 2025-06-23 17:55:21 PDT
<style> input::-webkit-inner-spin-button { appearance: none; width: 50%; background: red; } </style> <input type="number" min="0" max="10"> We currently use the percentage value as a pixel value, which is wrong.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-30 09:51:30 PDT
Aditya Keerthi
Comment 2 2025-06-30 09:58:41 PDT
EWS
Comment 3 2025-06-30 22:35:36 PDT
Committed 296850@main (0bd77658c08b): <https://commits.webkit.org/296850@main> Reviewed commits have been landed. Closing PR #47381 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.